changed default connection factory for webapi

--- a/Presentation/mobSocial.WebApi/Web.config
+++ b/Presentation/mobSocial.WebApi/Web.config
@@ -13,9 +13,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="System.Data.SqlServerCe.4.0" />
+        <parameter value="System.Data.SqlClient" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
