Excluded api paths from wildcard serving

--- a/Presentation/mobSocial.WebApp/Web.config
+++ b/Presentation/mobSocial.WebApp/Web.config
@@ -13,22 +13,27 @@
     </system.web>
     <system.webServer>
         <rewrite>
-            <rules>
-                <clear />
-                <rule name="Imported Rule 2" stopProcessing="true">
-                    <match url="." ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
-                        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" />
-                    </conditions>
-                    <action type="Rewrite" url="/index.html" />
-                </rule>
-                <rule name="Imported Rule 1" stopProcessing="true">
-                    <match url="^index\.html$" ignoreCase="false" />
-                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-                    <action type="None" />
-                </rule>
-            </rules>
+          <rules>
+            <clear />
+            <rule name="ApiCall"  stopProcessing="true">
+              <match url="^api/" />
+              <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+              <action type="None" />
+            </rule>
+            <rule name="Imported Rule 2" stopProcessing="true">
+              <match url="." ignoreCase="false" />
+              <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
+                <add input="{REQUEST_FILENAME}" matchType="IsFile" ignoreCase="false" negate="true" />
+                <add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" />
+              </conditions>
+              <action type="Rewrite" url="/index.html" />
+            </rule>
+            <rule name="Imported Rule 1" stopProcessing="true">
+              <match url="^index\.html$" ignoreCase="false" />
+              <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+              <action type="None" />
+            </rule>
+          </rules>
         </rewrite>
     </system.webServer>
 
