--- a/Libraries/mobSocial.Core/mobSocial.Core.csproj
+++ b/Libraries/mobSocial.Core/mobSocial.Core.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Data\BaseEntity.cs" />
     <Compile Include="Data\IDataRepository.cs" />
     <Compile Include="Data\ISoftDeletable.cs" />
+    <Compile Include="Helpers\ExpressionHelpers.cs" />
     <Compile Include="Infrastructure\DependencyManagement\DryIoc\AsyncExecutionFlowScopeContext.cs" />
     <Compile Include="Infrastructure\DependencyManagement\DryIoc\Container.cs" />
     <Compile Include="Infrastructure\DependencyManagement\DryIoc\FactoryCompiler.cs" />
