Ignored upload directory from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,4 @@ ModelManifest.xml
 # Configuration files
 Presentation\mobSocial.WebApi\App_Data
 Presentation/mobSocial.WebApi/App_Data/
+Presentation/mobSocial.WebApi/Content/Media/Uploads/
