--- a/Presentation/mobSocial.WebApi/packages.config
+++ b/Presentation/mobSocial.WebApi/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net451" />
+  <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net451" />
   <package id="ImageProcessor" version="2.3.3.0" targetFramework="net451" />
   <package id="ImageProcessor.Web" version="4.5.3.0" targetFramework="net451" />
   <package id="jQuery" version="2.2.3" targetFramework="net451" />
