--- a/Libraries/mobSocial.Data/mobSocial.Data.csproj
+++ b/Libraries/mobSocial.Data/mobSocial.Data.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Entity\Education\Education.cs" />
     <Compile Include="Entity\Emails\EmailAccount.cs" />
     <Compile Include="Entity\Emails\EmailTemplate.cs" />
-    <Compile Include="Entity\Emails\Token.cs" />
+    <Compile Include="Entity\Tokens\Token.cs" />
     <Compile Include="Entity\EntityProperties\EntityProperty.cs" />
     <Compile Include="Entity\EventPages\EventPage.cs" />
     <Compile Include="Entity\EventPages\EventPageAttendance.cs" />
