General token processor added to use throughout the app

--- a/Libraries/mobSocial.Data/mobSocial.Data.csproj
+++ b/Libraries/mobSocial.Data/mobSocial.Data.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\TokenFieldAttribute.cs" />
     <Compile Include="Constants\CreditContextKeyNames.cs" />
     <Compile Include="Constants\PaymentParameterNames.cs" />
     <Compile Include="Constants\PictureSizeNames.cs" />
