--- a/Tests/mobSocial.Tests/mobSocial.Tests.csproj
+++ b/Tests/mobSocial.Tests/mobSocial.Tests.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Api\VideoBattleControllerTests.cs" />
     <Compile Include="Mock\MockHelper.cs" />
     <Compile Include="Services\EventPublisherServiceTests.cs" />
+    <Compile Include="Services\TokenProcessorTests.cs" />
     <Compile Include="Setup\Extensions\HttpActionResultExtensions.cs" />
     <Compile Include="Setup\MobSocialTestCase.cs" />
     <Compile Include="Database\DatabaseStorageTests.cs" />
