--- a/Libraries/mobSocial.Services/mobSocial.Services.csproj
+++ b/Libraries/mobSocial.Services/mobSocial.Services.csproj
@@ -105,9 +105,11 @@
     <Compile Include="Education\SchoolService.cs" />
     <Compile Include="Emails\EmailAccountService.cs" />
     <Compile Include="Emails\EmailSender.cs" />
+    <Compile Include="Emails\EmailService.cs" />
     <Compile Include="Emails\EmailTemplateService.cs" />
     <Compile Include="Emails\IEmailAccountService.cs" />
     <Compile Include="Emails\IEmailSender.cs" />
+    <Compile Include="Emails\IEmailService.cs" />
     <Compile Include="Emails\IEmailTemplateService.cs" />
     <Compile Include="EntityProperties\EntityPropertyService.cs" />
     <Compile Include="EntityProperties\IEntityPropertyService.cs" />
