Cryptography services improved and configuration service added to query encryption keys from web.config

--- a/Libraries/mobSocial.Services/mobSocial.Services.csproj
+++ b/Libraries/mobSocial.Services/mobSocial.Services.csproj
@@ -152,6 +152,8 @@
     <Compile Include="Plugins\PluginFinderService.cs" />
     <Compile Include="Plugins\PluginInstallerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\ApplicationConfiguration.cs" />
+    <Compile Include="Security\IApplicationConfiguration.cs" />
     <Compile Include="Social\CommentService.cs" />
     <Compile Include="Social\FollowService.cs" />
     <Compile Include="Social\LikeService.cs" />
