required key settings added to config

--- a/Presentation/mobSocial.WebApi/Web.config
+++ b/Presentation/mobSocial.WebApi/Web.config
@@ -11,6 +11,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="encryptionKey" value="84774125847412259" />
+	<add key="encryptionSalt" value="8744148957441558" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
