--- a/Libraries/mobSocial.Data/mobSocial.Data.csproj
+++ b/Libraries/mobSocial.Data/mobSocial.Data.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Attributes\TokenFieldAttribute.cs" />
     <Compile Include="Constants\CreditContextKeyNames.cs" />
     <Compile Include="Constants\EmailTemplateNames.cs" />
+    <Compile Include="Constants\EmailTokenNames.cs" />
     <Compile Include="Constants\PaymentParameterNames.cs" />
     <Compile Include="Constants\PictureSizeNames.cs" />
     <Compile Include="Constants\PropertyNames.cs" />
