Task scheduler support added for performing cron jobs

--- a/Libraries/mobSocial.Core/mobSocial.Core.csproj
+++ b/Libraries/mobSocial.Core/mobSocial.Core.csproj
@@ -135,6 +135,8 @@
     <Compile Include="Services\Events\IEventPublisherService.cs" />
     <Compile Include="Startup\IOwinStartupTask.cs" />
     <Compile Include="Startup\IStartupTask.cs" />
+    <Compile Include="Tasks\ITask.cs" />
+    <Compile Include="Tasks\ITaskManager.cs" />
     <Compile Include="WebHelper.cs" />
   </ItemGroup>
   <ItemGroup>
