--- a/Libraries/mobSocial.Services/mobSocial.Services.csproj
+++ b/Libraries/mobSocial.Services/mobSocial.Services.csproj
@@ -36,6 +36,10 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="FluentScheduler, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b76503528a14ebd1, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FluentScheduler.5.0.0\lib\net40\FluentScheduler.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ImageProcessor, Version=2.3.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\ImageProcessor.2.3.3.0\lib\net45\ImageProcessor.dll</HintPath>
       <Private>True</Private>
@@ -152,6 +156,9 @@
     <Compile Include="Plugins\PluginFinderService.cs" />
     <Compile Include="Plugins\PluginInstallerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduledTasks\IScheduledTaskService.cs" />
+    <Compile Include="ScheduledTasks\ScheduledTaskService.cs" />
+    <Compile Include="ScheduledTasks\TaskManager.cs" />
     <Compile Include="Security\ApplicationConfiguration.cs" />
     <Compile Include="Security\IApplicationConfiguration.cs" />
     <Compile Include="Social\CommentService.cs" />
