--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ solution: mobSocial.sln
 
 install:
   - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-  - mono nuget.exe restore mobSocial.sln
+  - nuget restore ./src/yoursolution.sln
+  
+script:
+  - xbuild mobSocial.sln
