--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ solution: mobSocial.sln
 
 install:
   - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-  - nuget restore ./src/yoursolution.sln
+  - nuget restore mobSocial.sln
   
 script:
   - xbuild mobSocial.sln
