--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: csharp
 solution: mobSocial.sln
-
-install:
-  - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-  - nuget restore mobSocial.sln
-  
+before_install:
+  - mkdir -p .nuget
+  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+  - mono .nuget/nuget.exe
+install:  
+  - mono .nuget/nuget.exe restore mobSocial.sln  
 script:
   - xbuild mobSocial.sln
