added project file for web publishing

--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,7 @@ publish/
 # your web deploy settings because they may include unencrypted
 # passwords
 #*.pubxml
-*.publishproj
+#*.publishproj
 
 # NuGet Packages
 *.nupkg
