middleware to check software installation added to prevent any further api access

--- a/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
+++ b/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Configuration\Infrastructure\ApplicationContext.cs" />
     <Compile Include="Configuration\Infrastructure\DependencyRegistrar.cs" />
     <Compile Include="Configuration\Infrastructure\PictureSizeRegistrar.cs" />
+    <Compile Include="Configuration\Middlewares\InstallationVerifierMiddleware.cs" />
     <Compile Include="Configuration\Middlewares\MobAuthenticationMiddleware.cs" />
     <Compile Include="Configuration\Middlewares\PictureSizeRegistrar.cs" />
     <Compile Include="Configuration\Mvc\Models\RootEntityModel.cs" />
