--- a/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
+++ b/Presentation/mobSocial.WebApi/mobSocial.WebApi.csproj
@@ -63,6 +63,14 @@
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\..\packages\Microsoft.AspNet.Identity.Core.2.1.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.SignalR.Core.2.2.1\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb, Version=2.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.2.1\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
@@ -217,6 +225,12 @@
     <Compile Include="Configuration\Security\Attributes\AdminAuthorizeAttribute.cs" />
     <Compile Include="Configuration\Security\Attributes\RequireFeatureEnabledAttribute.cs" />
     <Compile Include="Configuration\Security\Attributes\CapabilityRequiredAttribute.cs" />
+    <Compile Include="Configuration\SignalR\Connections\UserConnection.cs" />
+    <Compile Include="Configuration\SignalR\Engines\MobSocialHubEngine.cs" />
+    <Compile Include="Configuration\SignalR\Engines\NotificationEngine.cs" />
+    <Compile Include="Configuration\SignalR\Hubs\MobSocialHub.cs" />
+    <Compile Include="Configuration\SignalR\Hubs\NotificationHub.cs" />
+    <Compile Include="Configuration\SignalR\Providers\SignalRUserIdProvider.cs" />
     <Compile Include="Configuration\Tasks\DatabaseSetupTask.cs" />
     <Compile Include="Configuration\Tasks\EmailSchedulerTask.cs" />
     <Compile Include="Configuration\ViewEngines\mobSocialRazorProviderViewEngine.cs" />
@@ -250,6 +264,7 @@
     <Compile Include="Extensions\ModelExtensions\EducationExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions\EmailExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions\MediaExtensions.cs" />
+    <Compile Include="Extensions\ModelExtensions\NotificationExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions\RoleExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions\SchoolExtensions.cs" />
     <Compile Include="Extensions\ModelExtensions\SettingExtensions.cs" />
@@ -291,6 +306,7 @@
     <Compile Include="Models\EntityProperty\EntityPropertyModel.cs" />
     <Compile Include="Models\Installation\InstallationRequestModel.cs" />
     <Compile Include="Models\Media\MediaReponseModel.cs" />
+    <Compile Include="Models\Notifications\NotificationModel.cs" />
     <Compile Include="Models\Payment\UserPaymentModel.cs" />
     <Compile Include="Models\Payment\UserPaymentPublicModel.cs" />
     <Compile Include="Models\Payment\UserPaymentRequestModel.cs" />
