notification api implemented for follow user and setup done for other events

--- a/Libraries/mobSocial.Data/mobSocial.Data.csproj
+++ b/Libraries/mobSocial.Data/mobSocial.Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Constants\CreditContextKeyNames.cs" />
     <Compile Include="Constants\EmailTemplateNames.cs" />
     <Compile Include="Constants\EmailTokenNames.cs" />
+    <Compile Include="Constants\NotificationEventNames.cs" />
     <Compile Include="Constants\PaymentParameterNames.cs" />
     <Compile Include="Constants\PictureSizeNames.cs" />
     <Compile Include="Constants\PropertyNames.cs" />
