commiting various updated config files

--- a/Plugins/mobSocial.Plugins.PaypalDirect/app.config
+++ b/Plugins/mobSocial.Plugins.PaypalDirect/app.config
@@ -30,6 +30,10 @@
         <assemblyIdentity name="PayPalCoreSDK" publicKeyToken="5b4afc1ccaef40fb" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.7.1.0" newVersion="1.7.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
