Email template installation added to install service

--- a/.gitignore
+++ b/.gitignore
@@ -245,8 +245,8 @@ ModelManifest.xml
 .fake/
 
 # Configuration files
-Presentation\mobSocial.WebApi\App_Data
-Presentation/mobSocial.WebApi/App_Data/
+Presentation\mobSocial.WebApi\App_Data\*.config
+Presentation/mobSocial.WebApi/App_Data/*.config
 Presentation/mobSocial.WebApi/Content/Media/Uploads/
 Presentation/mobSocial.WebApp/bundle.js
 Presentation/mobSocial.WebApp/bundle.js.map
